--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio Sprint 1 repetición</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
-	<header class="page-header"></header>
-		<div class="logo-adalab">
+	<header class="page-header">
+
 			<img src="images/logo-adalab-80px.png" class="logo"alt="logo-adalab">
-			<nav class="menu">
+
 				<ul class="menu">
-					<li class="menu-link">BLOG</li>
-					<li>CONTACTO</li>
+					<li  class="menu-item">
+						<a class="menu-link"href="https://medium.com/adalab">BLOG</a>
+					</li>
+					<li class="menu-item">
+						<a class="menu-link" href="http://adalab.es/contacto/">CONTACTO</a>
+					</li>
 				</ul>
 
-			</nav>
-		</div>
+
+		</header>
 
 
 	<main class="hero">
-		<h1 class="titulo-principal">Creando Diversidad Digital</h1>
+		<div class="contenerdor-hijo">
+			<h1 class="titulo-principal">Creando Diversidad Digital</h1>
+		</div>
+
 
 	</main>
 
