--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 	<header class="page-header">
-
+		<a href="http://adalab.es">
 			<img src="images/logo-adalab-80px.png" class="logo"alt="logo-adalab">
-
+		</a>
 				<ul class="menu">
 					<li  class="menu-item">
 						<a class="menu-link"href="https://medium.com/adalab">BLOG</a>
