--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<a href="http://adalab.es">
 			<img src="images/logo-adalab-80px.png" class="logo"alt="logo-adalab">
 		</a>
+<nav class="menu-nav">
+
+
 				<ul class="menu">
 					<li  class="menu-item">
 						<a class="menu-link"href="https://medium.com/adalab">BLOG</a>
@@ -21,7 +24,7 @@
 						<a class="menu-link" href="http://adalab.es/contacto/">CONTACTO</a>
 					</li>
 				</ul>
-
+</nav>
 
 		</header>
 
