--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio Sprint 1 repetición</title>
+	<link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
